// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiffStat expandedCounts 1`] = `
<DocumentFragment>
  <div
    class="diffStat"
    data-tooltip="1 addition, 2 changes, 3 deletions"
  >
    <strong
      class="a11y-ignore text-success mr-1"
    >
      +1
    </strong>
    <strong
      class="a11y-ignore text-warning mr-1"
    >
      •2
    </strong>
    <strong
      class="a11y-ignore text-danger"
    >
      −3
    </strong>
  </div>
</DocumentFragment>
`;

exports[`DiffStat standard 1`] = `
<DocumentFragment>
  <div
    class="diffStat"
    data-tooltip="1 addition, 2 changes, 3 deletions"
  >
    <small>
      8
    </small>
  </div>
</DocumentFragment>
`;

exports[`DiffStatSquares 1`] = `
<DocumentFragment>
  <div
    class="squares"
  >
    <div
      class="square bg-success"
    />
    <div
      class="square bg-warning"
    />
    <div
      class="square bg-danger"
    />
    <div
      class="square bg-danger"
    />
    <div
      class="square bg-danger"
    />
  </div>
</DocumentFragment>
`;

exports[`DiffStatStack 1`] = `
<DocumentFragment>
  <div
    class="d-flex flex-column align-items-center"
  >
    <div
      class="diffStat pb-1"
      data-tooltip="1 addition, 2 changes, 3 deletions"
    >
      <strong
        class="a11y-ignore text-success mr-1"
      >
        +1
      </strong>
      <strong
        class="a11y-ignore text-warning mr-1"
      >
        •2
      </strong>
      <strong
        class="a11y-ignore text-danger"
      >
        −3
      </strong>
    </div>
    <div
      class="squares"
    >
      <div
        class="square bg-success"
      />
      <div
        class="square bg-warning"
      />
      <div
        class="square bg-danger"
      />
      <div
        class="square bg-danger"
      />
      <div
        class="square bg-danger"
      />
    </div>
  </div>
</DocumentFragment>
`;
